- update loom examples for java 21